# xbridge_witness

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  attn_srv.json  circle.yml  conanfile.py  conanfile.txt
.github/workflows/: greetings.yml
Builds/CMake/: XBridgeWitnessCov.cmake  XBridgeWitnessInterface.cmake
doc/: testing.md
src/test/: ValidatorKeysTool_test.cpp  ValidatorKeys_test.cpp
src/xbwd/app/: App.cpp  App.h  BuildInfo.cpp  BuildInfo.h  Config.cpp  Config.h  DBInit.cpp  DBInit.h  main.cpp
src/xbwd/basics/: ChainTypes.h  StructuredLog.h  ThreadSaftyAnalysis.h
src/xbwd/client/: ChainListener.cpp  ChainListener.h  RpcResultParse.cpp  RpcResultParse.h  WebsocketClient.cpp  WebsocketClient.h
src/xbwd/core/: DatabaseCon.cpp  DatabaseCon.h  SociDB.cpp  SociDB.h
src/xbwd/federator/: Federator.cpp  Federator.h  FederatorEvents.cpp  FederatorEvents.h  TxnSupport.h
src/xbwd/rpc/: RPCCall.h  RPCClient.cpp  RPCClient.h  RPCHandler.cpp  RPCHandler.h  ServerHandler.cpp  ServerHandler.h  fromJSON.h
